# epp-sla-ai-nl2sql-model

./: pyproject.toml
.github/workflows/: docker-build-push.yml
aws/terraform/: README.md  backend.tf  main.tf  outputs.tf
aws/terraform/bootstrap/: main.tf
aws/terraform/modules/iam/: main.tf
docker/: app.Dockerfile  serve
src/common/: s3_utils.py
src/database/: db_generator.py
src/datagen/: augmentor.py  templates.py
src/model/: inference.py
